// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reduxFormFieldAdapter not validated input should render as expected 1`] = `
<Input
  className=""
  meta={
    Object {
      "active": false,
      "error": null,
    }
  }
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  value="inputValue"
/>
`;

exports[`reduxFormFieldAdapter validate input should render Popover as invisible if there is an error but the field is active 1`] = `
<Popover
  content="error content"
  open={false}
  placement="bottomLeft"
  title="error title"
>
  <Input
    className="AdaptedReduxFormField--isValidatedInput"
    meta={
      Object {
        "active": true,
        "error": Object {
          "content": "error content",
          "title": "error title",
        },
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="inputValue"
  />
</Popover>
`;

exports[`reduxFormFieldAdapter validate input should render Popover as visible if there is an error and the field is not active 1`] = `
<Popover
  content="error content"
  open={true}
  placement="bottomLeft"
  title="error title"
>
  <Input
    className="is-invalid AdaptedReduxFormField--isValidatedInput"
    meta={
      Object {
        "active": false,
        "error": Object {
          "content": "error content",
          "title": "error title",
        },
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="inputValue"
  />
</Popover>
`;

exports[`reduxFormFieldAdapter validate input should render as expected when there is not an error 1`] = `
<Popover
  open={false}
  placement="bottomLeft"
>
  <Input
    className="AdaptedReduxFormField--isValidatedInput"
    meta={
      Object {
        "active": false,
        "error": null,
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="inputValue"
  />
</Popover>
`;
